Add bias override and use Pixel.normalize method